started on stats

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Topnav from "../components/topnav.astro";
 ---
 
 
@@ -13,6 +14,7 @@ import "../styles/global.css";
 		<title>Astro Basics</title>
 	</head>
 	<body class="bg-black">
+		<Topnav />^
 		<slot />
 	</body>
 </html>
