--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 	import Layout from "../layouts/Layout.astro";
 	import "../styles/global.css";
-	import Topnav from "../components/topnav.astro";
+	import Smallgraph from "../components/smallgraph.astro";
 ---
 
 <Layout>
-	<Topnav />
-	<h1 class="text-white">Hello, world!</h1>
+	<Smallgraph />
 </Layout>
