--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,8 +13,8 @@ import Topnav from "../components/topnav.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body class="bg-black">
-		<Topnav />^
+	<body class="bg-black text-white">
+		<Topnav />
 		<slot />
 	</body>
 </html>
