--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,5 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    
+    <p class="m-4 p-4 bg-[#d9d9d9] text-black rounded-md">Schön, dass Sie hier bei uns vorbeischauen und sich für die Geschichte des Musikhauses interessieren. Mein Name ist Hans Thomann und ich bin seit 1990 Geschäftsführer von Thomann. Die Firma wurde 1954 von meinem Vater, Hans Thomann Senior, gegründet. Seit meinem 12. Lebensjahr hat er mich schrittweise ans Unternehmen herangeführt. Für die Familie Thomann ist Musik seit jeher Leidenschaft und Lebensinhalt.
+        Mein Beruf ist ursprünglich Feingeräteelektroniker und Blasinstrumentenbauer. Mein Vater hat mir schon früh die Leitung des Unternehmens übertragen und mir dabei viele wertvolle Tipps mit auf den Weg gegeben. Einer der wertvollsten war, immer auf die Kunden zu hören und von ihnen zu lernen. Auch wenn sich seither unendlich viel verändert hat, so ist und bleibt unser Motto: Unsere Kunden bestimmen unser Handeln.
+        Ich bin sehr stolz darauf, dass wir mit unseren 1.660 Mitarbeitern bis heute ein unabhängiger Familienbetrieb geblieben sind. Die gemeinsame Leidenschaft zur Musik verbindet uns und prägt das Miteinander bei Thomann
+        Die besten Produkte zum besten Preis zu verkaufen ist eine unserer Stärken. Nicht minder wichtig ist uns der Service. Wir wollen, dass Sie für Ihr Geld das Beste bekommen und haben uns dafür ein eigenes Credo geschaffen: Added Value. Dazu gehört, dass wir bereits seit 1995 – weit vor Einführung des Fernabsatzgesetzes – eine grundsätzliche 30-tägige Geld-Zurück-Garantie anbieten. Anfang 2005 haben wir außerdem die Garantiezeit auf unsere Kosten auf volle drei Jahre Garantie erweitert. Zufriedene Kunden machen auch uns zufrieden und wir freuen uns über die familiäre Atmosphäre in unserem Haus.</p>
 </Layout>
