--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,5 +9,11 @@ import Layout from "../layouts/Layout.astro";
         <select name="Titel" class="border-2 rounded-md p-2 w-full placerholder-black bg-[#102e4a]"> <option value="Dr">Dr.</option> <option value="Prof">Prof.</option> <option value="Ing.">Ing.</option> </select>
         <input type="text" placeholder="Name" class="border-2 rounded-md p-2 w-full placerholder-black bg-[#102e4a]">
         <input type="text" placeholder="Vorname" class="border-2 rounded-md p-2 w-full placerholder-black bg-[#102e4a]">
+        <input type="text" placeholder="Telefon" class="border-2 rounded-md p-2 w-full placerholder-black bg-[#102e4a]">
+        <input type="text" placeholder="E-Mail" class="border-2 rounded-md p-2 w-full placerholder-black bg-[#102e4a]">
+        <textarea name="Nachricht" placeholder="Nachricht" class="col-span-2 border-2 rounded-md p-2 w-full placerholder-black bg-[#102e4a]"></textarea>
+        <div class="col-span-2 flex justify-center">
+            <button class="bg-fuchsia-800 text-white rounded-md p-2 w-half placerholder-black">Senden</button>
+        </div>
     </div>
 </Layout>
